Add GCP_API_KEY To .env.sample

--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,4 @@
 MONEYFORWARD_EMAIL=YOUR_MONEYFORWARD_EMAIL
 MONEYFORWARD_PASSWORD=YOUR_MONEYFORWARD_PASSWORD
+GCP_API_KEY=YOUR_GCP_API_KEY
 SENTRY_DSN=YOUR_SENTRY_DSN
